force-app/main/default/objects/Evaluation__c/fields/Knowledge_of_needed_equipment__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_of_needed_equipment__c</fullName>
    <description>Knowledge of needed equipment</description>
    <inlineHelpText>Knowledge of needed equipment</inlineHelpText>
    <label>Knowledge of needed equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>