force-app/main/default/objects/Evaluation__c/fields/Lift_Device__c.field-meta.xml
<CustomField>
    <fullName>Lift_Device__c</fullName>
    <description>Captures the type of lift device being evaluated.</description>
    <inlineHelpText>Indicates the type of lift device being evaluated.</inlineHelpText>
    <label>Lift Device</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Articulated</fullName>
            </value>
            <value>
                <fullName>Articulated Boom Lift</fullName>
            </value>
            <value>
                <fullName>Bucket Truck</fullName>
            </value>
            <value>
                <fullName>Cable Boom</fullName>
            </value>
            <value>
                <fullName>Cab Operated</fullName>
            </value>
            <value>
                <fullName>Combi Lift</fullName>
            </value>
            <value>
                <fullName>Counterbalance</fullName>
            </value>
            <value>
                <fullName>Elastomeric Full Facepiece</fullName>
            </value>
            <value>
                <fullName>Elastomeric Half Facepiece</fullName>
            </value>
            <value>
                <fullName>Electric Pallet</fullName>
            </value>
            <value>
                <fullName>Filtering Facepiece</fullName>
            </value>
            <value>
                <fullName>Gantry Crane</fullName>
            </value>
            <value>
                <fullName>Jib Crane</fullName>
            </value>
            <value>
                <fullName>Legacy Device</fullName>
            </value>
            <value>
                <fullName>Moffett</fullName>
            </value>
            <value>
                <fullName>Monorail</fullName>
            </value>
            <value>
                <fullName>Narrow Aisle</fullName>
            </value>
            <value>
                <fullName>Order Picker</fullName>
            </value>
            <value>
                <fullName>Overhead Bridge</fullName>
            </value>
            <value>
                <fullName>Pallet Truck</fullName>
            </value>
            <value>
                <fullName>Powered Air Purifying Respirator</fullName>
            </value>
            <value>
                <fullName>Rough Terrain</fullName>
            </value>
            <value>
                <fullName>Scissor Lift</fullName>
            </value>
            <value>
                <fullName>Self-Contained Breathing Apparatus</fullName>
            </value>
            <value>
                <fullName>Single Beam</fullName>
            </value>
            <value>
                <fullName>Supplied Air Respirator</fullName>
            </value>
            <value>
                <fullName>Telehandler</fullName>
            </value>
            <value>
                <fullName>Telescopic Boom</fullName>
            </value>
            <value>
                <fullName>Tow Tractor/Tugger</fullName>
            </value>
            <value>
                <fullName>Walkie Rider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>