force-app/main/default/objects/Evaluation__c/fields/Lift_Device_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Lift_Device_Capacity__c</fullName>
    <description>Captures the capacity of the selected Lift Device</description>
    <label>Lift Device Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>