force-app/main/default/objects/Evaluation__c/fields/Load_engaged_smoothly_lifted_to_clear__c.field-meta.xml
<CustomField>
    <fullName>Load_engaged_smoothly_lifted_to_clear__c</fullName>
    <description>Load engaged smoothly and lifted to clear rack</description>
    <inlineHelpText>Load engaged smoothly and lifted to clear rack</inlineHelpText>
    <label>Load engaged smoothly &amp; lifted to clear</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>