force-app/main/default/objects/Evaluation__c/fields/Load_is_secure_and_balanced__c.field-meta.xml
<CustomField>
    <fullName>Load_is_secure_and_balanced__c</fullName>
    <description>Load is secure and balanced</description>
    <inlineHelpText>Load is secure and balanced</inlineHelpText>
    <label>Load is secure and balanced</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>