force-app/main/default/objects/Evaluation__c/fields/Load_lowered_smoothly_no_contact_w_obj__c.field-meta.xml
<CustomField>
    <fullName>Load_lowered_smoothly_no_contact_w_obj__c</fullName>
    <description>Load lowered smoothly, no contact with other objects</description>
    <inlineHelpText>Load lowered smoothly, no contact with other objects</inlineHelpText>
    <label>Load lowered smoothly, no contact w/ obj</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>