force-app/main/default/objects/Evaluation__c/fields/Load_raised_smoothly_no_contact_any_obj__c.field-meta.xml
<CustomField>
    <fullName>Load_raised_smoothly_no_contact_any_obj__c</fullName>
    <description>Load raised smoothly, no contact with any objects</description>
    <inlineHelpText>Load raised smoothly, no contact with any objects</inlineHelpText>
    <label>Load raised smoothly, no contact any obj</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>