force-app/main/default/objects/Evaluation__c/fields/Load_tilted_back_to_stabilize_reverses__c.field-meta.xml
<CustomField>
    <fullName>Load_tilted_back_to_stabilize_reverses__c</fullName>
    <description>Load tilted back to stabilize, reverses smoothly to clear rack</description>
    <inlineHelpText>Load tilted back to stabilize, reverses smoothly to clear rack</inlineHelpText>
    <label>Load tilted back to stabilize, reverses</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>