force-app/main/default/objects/Evaluation__c/fields/Looks_for_hazards_b4_moving_boom_bucket__c.field-meta.xml
<CustomField>
    <fullName>Looks_for_hazards_b4_moving_boom_bucket__c</fullName>
    <description>Looks for hazards b4 moving boom/bucket</description>
    <inlineHelpText>Looks for hazards b4 moving boom/bucket</inlineHelpText>
    <label>Looks for hazards b4 moving boom/bucket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>