force-app/main/default/objects/Evaluation__c/fields/Looks_over_both_shoulders_reversing__c.field-meta.xml
<CustomField>
    <fullName>Looks_over_both_shoulders_reversing__c</fullName>
    <description>Looks over both shoulders reversing</description>
    <inlineHelpText>Looks over both shoulders reversing</inlineHelpText>
    <label>Looks over both shoulders reversing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>