force-app/main/default/objects/Evaluation__c/fields/Maintains_safe_dist_from_obstructions__c.field-meta.xml
<CustomField>
    <fullName>Maintains_safe_dist_from_obstructions__c</fullName>
    <description>Maintains safe dist. from obstructions</description>
    <inlineHelpText>Maintains safe dist. from obstructions</inlineHelpText>
    <label>Maintains safe dist. from obstructions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>