force-app/main/default/objects/Evaluation__c/fields/Maintains_safe_working_dist_from_pwr__c.field-meta.xml
<CustomField>
    <fullName>Maintains_safe_working_dist_from_pwr__c</fullName>
    <description>Maintains safe working dist. from pwr</description>
    <inlineHelpText>Maintains safe working dist. from pwr</inlineHelpText>
    <label>Maintains safe working dist. from pwr</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>