force-app/main/default/objects/Evaluation__c/fields/Mast_raised_smoothly_no_contact_w_obj__c.field-meta.xml
<CustomField>
    <fullName>Mast_raised_smoothly_no_contact_w_obj__c</fullName>
    <description>Mast raised smoothly, no contact with objects</description>
    <inlineHelpText>Mast raised smoothly, no contact with objects</inlineHelpText>
    <label>Mast raised smoothly, no contact w/ obj.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>