force-app/main/default/objects/Evaluation__c/fields/Moves_load_at_appropriate_height__c.field-meta.xml
<CustomField>
    <fullName>Moves_load_at_appropriate_height__c</fullName>
    <description>Moves load at appropriate height</description>
    <inlineHelpText>Moves load at appropriate height</inlineHelpText>
    <label>Moves load at appropriate height</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>