force-app/main/default/objects/Evaluation__c/fields/One_operation_at_a_time__c.field-meta.xml
<CustomField>
    <fullName>One_operation_at_a_time__c</fullName>
    <description>One operation at a time</description>
    <inlineHelpText>One operation at a time</inlineHelpText>
    <label>One operation at a time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>