force-app/main/default/objects/Evaluation__c/fields/Operates_controls_approp_w_confidence__c.field-meta.xml
<CustomField>
    <fullName>Operates_controls_approp_w_confidence__c</fullName>
    <description>Operates controls approp &amp; w/ confidence</description>
    <inlineHelpText>Operates controls approp &amp; w/ confidence</inlineHelpText>
    <label>Operates controls approp &amp; w/ confidence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>