force-app/main/default/objects/Evaluation__c/fields/Operates_controls_smoothly_correct_seq__c.field-meta.xml
<CustomField>
    <fullName>Operates_controls_smoothly_correct_seq__c</fullName>
    <description>Operates controls smoothly and in correct sequence</description>
    <inlineHelpText>Operates controls smoothly and in correct sequence</inlineHelpText>
    <label>Operates controls smoothly &amp; correct seq</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>