force-app/main/default/objects/Evaluation__c/fields/Operates_device_safely_and_confidently__c.field-meta.xml
<CustomField>
    <fullName>Operates_device_safely_and_confidently__c</fullName>
    <description>Operates device safely and confidently</description>
    <inlineHelpText>Operates device safely and confidently</inlineHelpText>
    <label>Operates device safely and confidently</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>