force-app/main/default/objects/Evaluation__c/fields/Operates_eqp_w_smooth_actions_safe_speed__c.field-meta.xml
<CustomField>
    <fullName>Operates_eqp_w_smooth_actions_safe_speed__c</fullName>
    <description>Operates eqp w/smooth actions&amp;safe speed</description>
    <inlineHelpText>Operates eqp w/smooth actions&amp;safe speed</inlineHelpText>
    <label>Operates eqp w/smooth actions&amp;safe speed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>