force-app/main/default/objects/Evaluation__c/fields/Operates_Safely__c.field-meta.xml
<CustomField>
    <fullName>Operates_Safely__c</fullName>
    <label>Operates Safely</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>