force-app/main/default/objects/Evaluation__c/fields/Operates_safely_on_ramps__c.field-meta.xml
<CustomField>
    <fullName>Operates_safely_on_ramps__c</fullName>
    <description>Operates safely on ramps</description>
    <inlineHelpText>Operates safely on ramps</inlineHelpText>
    <label>Operates safely on ramps</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>