force-app/main/default/objects/Evaluation__c/fields/Operational_Inspection_Completed__c.field-meta.xml
<CustomField>
    <fullName>Operational_Inspection_Completed__c</fullName>
    <description>Operational Inspection Completed</description>
    <inlineHelpText>Operational Inspection Completed</inlineHelpText>
    <label>Operational Inspection Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>