force-app/main/default/objects/Evaluation__c/fields/Parking_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Parking_Procedure__c</fullName>
    <description>Parking Procedure</description>
    <inlineHelpText>Parking Procedure</inlineHelpText>
    <label>Parking Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>