force-app/main/default/objects/Evaluation__c/fields/Parks_vehicle_on_flat_solid_surface__c.field-meta.xml
<CustomField>
    <fullName>Parks_vehicle_on_flat_solid_surface__c</fullName>
    <description>Parks vehicle on flat, solid surface</description>
    <inlineHelpText>Parks vehicle on flat, solid surface</inlineHelpText>
    <label>Parks vehicle on flat, solid surface</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>