force-app/main/default/objects/Evaluation__c/fields/Performs_complete_pre_operational_check__c.field-meta.xml
<CustomField>
    <fullName>Performs_complete_pre_operational_check__c</fullName>
    <description>Performs complete pre-operational check (visual)</description>
    <label>Performs complete pre-operational check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>