force-app/main/default/objects/Evaluation__c/fields/Performs_safely_around_pedestrians__c.field-meta.xml
<CustomField>
    <fullName>Performs_safely_around_pedestrians__c</fullName>
    <description>Performs safely around pedestrians</description>
    <inlineHelpText>Performs safely around pedestrians</inlineHelpText>
    <label>Performs safely around pedestrians</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>