force-app/main/default/objects/Evaluation__c/fields/Places_of_safety_cones_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Places_of_safety_cones_if_applicable__c</fullName>
    <description>Places of safety cones (if applicable)</description>
    <inlineHelpText>Places of safety cones (if applicable)</inlineHelpText>
    <label>Places of safety cones (if applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>