force-app/main/default/objects/Evaluation__c/fields/Positions_vehicle_to_operate_safely__c.field-meta.xml
<CustomField>
    <fullName>Positions_vehicle_to_operate_safely__c</fullName>
    <description>Positions vehicle to operate safely</description>
    <inlineHelpText>Positions vehicle to operate safely</inlineHelpText>
    <label>Positions vehicle to operate safely</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>