force-app/main/default/objects/Evaluation__c/fields/Pre_inspect_plate_clamps_magnets_etc__c.field-meta.xml
<CustomField>
    <fullName>Pre_inspect_plate_clamps_magnets_etc__c</fullName>
    <description>Pre-inspect plate clamps, magnets, etc.</description>
    <inlineHelpText>Pre-inspect plate clamps, magnets, etc.</inlineHelpText>
    <label>Pre-inspect plate clamps, magnets, etc.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>