force-app/main/default/objects/Evaluation__c/fields/Pre_inspect_wire_rope_etc_for_damage__c.field-meta.xml
<CustomField>
    <fullName>Pre_inspect_wire_rope_etc_for_damage__c</fullName>
    <description>Pre-inspect wire rope, etc. for damage</description>
    <inlineHelpText>Pre-inspect wire rope, etc. for damage</inlineHelpText>
    <label>Pre-inspect wire rope, etc. for damage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>