force-app/main/default/objects/Evaluation__c/fields/Pre_inspet_the_rigging_attach_slings__c.field-meta.xml
<CustomField>
    <fullName>Pre_inspet_the_rigging_attach_slings__c</fullName>
    <description>Pre-inspet the rigging attach. &amp; slings</description>
    <inlineHelpText>Pre-inspet the rigging attach. &amp; slings</inlineHelpText>
    <label>Pre-inspet the rigging attach. &amp; slings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>