force-app/main/default/objects/Evaluation__c/fields/Pre_operational_Check_Visual__c.field-meta.xml
<CustomField>
    <fullName>Pre_operational_Check_Visual__c</fullName>
    <description>Pre-operational Check - Visual</description>
    <inlineHelpText>Pre-operational Check - Visual</inlineHelpText>
    <label>Pre-operational Check - Visual</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>