force-app/main/default/objects/Evaluation__c/fields/Propane_cylinder_exchange_procedure__c.field-meta.xml
<CustomField>
    <fullName>Propane_cylinder_exchange_procedure__c</fullName>
    <description>Propane cylinder exchange procedure</description>
    <inlineHelpText>Propane cylinder exchange procedure</inlineHelpText>
    <label>Propane cylinder exchange procedure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>