force-app/main/default/objects/Evaluation__c/fields/Proper_donning_fall_arrest_PPE_snug_fit__c.field-meta.xml
<CustomField>
    <fullName>Proper_donning_fall_arrest_PPE_snug_fit__c</fullName>
    <description>Proper donning fall arrest PPE/snug fit</description>
    <inlineHelpText>Proper donning fall arrest PPE/snug fit</inlineHelpText>
    <label>Proper donning fall arrest PPE/snug fit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>