force-app/main/default/objects/Evaluation__c/fields/Proper_donning_of_fall_protection__c.field-meta.xml
<CustomField>
    <fullName>Proper_donning_of_fall_protection__c</fullName>
    <description>Proper donning of fall protection</description>
    <inlineHelpText>Proper donning of fall protection</inlineHelpText>
    <label>Proper donning of fall protection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>